
	* gtk/Graphics/UI/Gtk/Selectors/FileChooser.chs.pp: add binding to an
	extra proerty and its getter/setter methods.

	* gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: add bindings for another
	20 methods.

	* gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp: add myself
	as author.

	* gtk/Graphics/UI/Gtk/TreeList/CellView.chs.pp: fix bug caused by
	overlapping patterns.

2005-04-6 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/callbackGen/gtkmarshal.list: tidy up slightly, and add
	extra marshaler since it'll be needed soon.

	* tools/hierarchyGen/hierarchy.list: add an extra class to hierarchy.

	* glib/System/Glib/hsgclosure.c, glib/System/Glib/hsgclosure.h: add
	support for an alternative way of doing signals. We have one single
	'generic' marshaler implemented in C using glib's GClosure system. It
	uses GHC's public rts api to invoke Haskell callbacks, passing
	parameters of the appropriate types.

	* glib/System/Glib/Signals.chs: add Haskell-side interface to the new
	marshaling code. Basically adds connectGeneric which is used by all
	the per-type marshaling functions.

	* Makefile.am: build support for new marshalign modules. We need
	GHC_INCLUDEDIR so we can get at the GHC rts headder files.

	* configure.ac: provide GHC_INCLUDEDIR, which is bascially just 
	`$GHC --print-libdir`/include

	* tools/callbackGen/HookGenerator.hs,
	tools/callbackGen/Signal.chs.template: modify the callback marshaler
	code generator to generate marshalers that use the new GClosure-based
	marshaling system. Change the signals template so that it import the
	System.Glib.Signals code rather than defining everything locally. Also
	parameterise by the module name so we can have more than a single
	global Signals module. The code dealing with the Sparc 4 word marshaling
	restriction has been dropped as it is no longer a problem.

	* Makefile.am: change the way gtk/Graphics/UI/Gtk/Signals.chs is
	built. The template file and the module name are now explictly